--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^1.1.3",
     "inquirer": "^0.12.0",
     "kue": "^0.10.5",
     "yargs": "^4.3.2"
