--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "inquirer": "^0.12.0",
+    "ioredis": "^2.2.0",
     "kue": "^0.10.5",
     "yargs": "^4.3.2"
   }
